--- a/Поиск товаров/index.html
+++ b/Поиск товаров/index.html
@@ -28,7 +28,7 @@
                 </div>
                 
 	            <div class="header_autorization">
-	                <a href="#">
+	                <a href="#"
 	                <span>
 	                    <img src="img/autorization.png" alt="">
 	                </span>
